force-app/main/default/objects/Contact/fields/Accident__c.field-meta.xml
<CustomField>
    <fullName>Accident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>事故有無</label>
    <type>Checkbox</type>
</CustomField>