force-app/main/default/objects/Contact/fields/Addressee_MailingAddress__c.field-meta.xml
<CustomField>
    <fullName>Addressee_MailingAddress__c</fullName>
    <label>送付先住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>