force-app/main/default/objects/Contact/fields/Addressee_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Addressee_PostalCode__c</fullName>
    <label>送付先郵便番号</label>
    <length>8</length>
    <type>Text</type>
</CustomField>