force-app/main/default/objects/Contact/fields/AddressKana__c.field-meta.xml
<CustomField>
    <fullName>AddressKana__c</fullName>
    <label>住所カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>