force-app/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>FinServ__Age__c</formula>
    <label>契約者年齢</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>