force-app/main/default/objects/Contact/fields/Age_Test__c.field-meta.xml
<CustomField>
    <fullName>Age_Test__c</fullName>
    <formula>FLOOR( ( TODAY() -  DateOfBirth__c  ) / 365.2425 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>年齢</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>