force-app/main/default/objects/Contact/fields/AgencyCode__c.field-meta.xml
<CustomField>
    <fullName>AgencyCode__c</fullName>
    <label>代理店名コード</label>
    <length>12</length>
    <type>Text</type>
</CustomField>