force-app/main/default/objects/Contact/fields/AgencyKana__c.field-meta.xml
<CustomField>
    <fullName>AgencyKana__c</fullName>
    <label>代理店カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>