force-app/main/default/objects/Contact/fields/AgencyKanaFormula__c.field-meta.xml
<CustomField>
    <fullName>AgencyKanaFormula__c</fullName>
    <description>画面用代理店カナ数式項目</description>
    <formula>Account.CounterpartyName_Kana__c</formula>
    <label>代理店カナ</label>
    <type>Text</type>
</CustomField>