force-app/main/default/objects/Contact/fields/AgencyName__c.field-meta.xml
<CustomField>
    <fullName>AgencyName__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>代理店名</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>代理店</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>代理店連絡先</relationshipLabel>
    <relationshipName>AgencyName</relationshipName>
    <type>Lookup</type>
</CustomField>