force-app/main/default/objects/Contact/fields/AgencyNumber__c.field-meta.xml
<CustomField>
    <fullName>AgencyNumber__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>代理店登録番号</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>取引先責任者</relationshipLabel>
    <relationshipName>AgencyRegistrationNumber_child</relationshipName>
    <type>Lookup</type>
</CustomField>