force-app/main/default/objects/Contact/fields/AgencyRepresentative__c.field-meta.xml
<CustomField>
    <fullName>AgencyRepresentative__c</fullName>
    <label>代理店担当者</label>
    <length>20</length>
    <type>Text</type>
</CustomField>