force-app/main/default/objects/Contact/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <formula>Birthdate</formula>
    <label>契約者生年月日</label>
    <type>Date</type>
</CustomField>