force-app/main/default/objects/Contact/fields/BranchName__c.field-meta.xml
<CustomField>
    <fullName>BranchName__c</fullName>
    <label>営業店名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>