force-app/main/default/objects/Contact/fields/CIFCode__c.field-meta.xml
<CustomField>
    <fullName>CIFCode__c</fullName>
    <label>CIFコード</label>
    <length>15</length>
    <type>Text</type>
</CustomField>