force-app/main/default/objects/Contact/fields/CommencementInsurance__c.field-meta.xml
<CustomField>
    <fullName>CommencementInsurance__c</fullName>
    <label>保険始期</label>
    <type>Date</type>
</CustomField>