force-app/main/default/objects/Contact/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <formula>Account.PersonContactId</formula>
    <label>取引先責任者ID</label>
    <type>Text</type>
</CustomField>