force-app/main/default/objects/Contact/fields/ContractorAddressKana__c.field-meta.xml
<CustomField>
    <fullName>ContractorAddressKana__c</fullName>
    <label>契約者住所カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>