force-app/main/default/objects/Contact/fields/ContractorAge__c.field-meta.xml
<CustomField>
    <fullName>ContractorAge__c</fullName>
    <label>契約者年齢</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>