force-app/main/default/objects/Contact/fields/ContractorPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ContractorPostalCode__c</fullName>
    <label>契約者郵便番号</label>
    <length>8</length>
    <type>Text</type>
</CustomField>