force-app/main/default/objects/Contact/fields/Counterparty_LastName__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_LastName__c</fullName>
    <label>相手先姓</label>
    <length>50</length>
    <type>Text</type>
</CustomField>