force-app/main/default/objects/Contact/fields/CounterpartyNameKana__c.field-meta.xml
<CustomField>
    <fullName>CounterpartyNameKana__c</fullName>
    <label>相手先名カナ</label>
    <length>50</length>
    <type>Text</type>
</CustomField>