force-app/main/default/objects/Contact/fields/CounterpartyType__c.field-meta.xml
<CustomField>
    <fullName>CounterpartyType__c</fullName>
    <label>相手先タイプ</label>
    <length>20</length>
    <type>Text</type>
</CustomField>