force-app/main/default/objects/Contact/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <formula>CreatedDate</formula>
    <label>作成日</label>
    <type>DateTime</type>
</CustomField>