force-app/main/default/objects/Contact/fields/DepartmentName__c.field-meta.xml
<CustomField>
    <fullName>DepartmentName__c</fullName>
    <label>部署名</label>
    <length>30</length>
    <type>Text</type>
</CustomField>