force-app/main/default/objects/Contact/fields/DestinationCode__c.field-meta.xml
<CustomField>
    <fullName>DestinationCode__c</fullName>
    <formula>AgencyName__r.CounterpartyCode__c</formula>
    <label>代理店名コード</label>
    <type>Text</type>
</CustomField>