force-app/main/default/objects/Contact/fields/DestinationName__c.field-meta.xml
<CustomField>
    <fullName>DestinationName__c</fullName>
    <formula>Account.Name</formula>
    <label>代理店名</label>
    <type>Text</type>
</CustomField>