force-app/main/default/objects/Contact/fields/EmailAddressAttributes__c.field-meta.xml
<CustomField>
    <fullName>EmailAddressAttributes__c</fullName>
    <label>メールアドレス属性</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>属性A</fullName>
            </value>
            <value>
                <fullName>属性B</fullName>
            </value>
            <value>
                <fullName>属性C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>