force-app/main/default/objects/Contact/fields/FaxNumber__c.field-meta.xml
<CustomField>
    <fullName>FaxNumber__c</fullName>
    <label>FAX番号</label>
    <type>Phone</type>
</CustomField>