force-app/main/default/objects/Contact/fields/FaxNumberAllowed__c.field-meta.xml
<CustomField>
    <fullName>FaxNumberAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FAX番号許可</label>
    <type>Checkbox</type>
</CustomField>