force-app/main/default/objects/Contact/fields/FinServ__AnnualIncome__c.field-meta.xml
<CustomField>
    <fullName>FinServ__AnnualIncome__c</fullName>
    <label>Annual Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>