force-app/main/default/objects/Contact/fields/FinServ__Citizenship__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Citizenship__c</fullName>
    <label>Citizenship</label>
    <length>50</length>
    <type>Text</type>
</CustomField>