force-app/main/default/objects/Contact/fields/FinServ__CommunicationPreferences__c.field-meta.xml
<CustomField>
    <fullName>FinServ__CommunicationPreferences__c</fullName>
    <label>Communication Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>電話</fullName>
            </value>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>ショートメッセージ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>