force-app/main/default/objects/Contact/fields/FinServ__ContactPreference__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ContactPreference__c</fullName>
    <label>Contact Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>電話</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>