force-app/main/default/objects/Contact/fields/FinServ__EmployedSince__c.field-meta.xml
<CustomField>
    <fullName>FinServ__EmployedSince__c</fullName>
    <description>Year when client started with current employer.</description>
    <label>Employed Since</label>
    <type>Date</type>
</CustomField>