force-app/main/default/objects/Contact/fields/FinServ__Gender__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>女性</fullName>
            </value>
            <value>
                <fullName>男性</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>