force-app/main/default/objects/Contact/fields/FinServ__HomeOwnership__c.field-meta.xml
<CustomField>
    <fullName>FinServ__HomeOwnership__c</fullName>
    <label>Home Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>賃貸</fullName>
            </value>
            <value>
                <fullName>自己所有</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>