force-app/main/default/objects/Contact/fields/FinServ__IndividualType__c.field-meta.xml
<CustomField>
    <fullName>FinServ__IndividualType__c</fullName>
    <description>Individual Type</description>
    <label>Individual Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>個人</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>