force-app/main/default/objects/Contact/fields/FinServ__LastFourDigitSSN__c.field-meta.xml
<CustomField>
    <fullName>FinServ__LastFourDigitSSN__c</fullName>
    <description>Last 4-Digits of SSN or Tax ID</description>
    <label>SSN/Tax ID (Last Four Digits)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>