force-app/main/default/objects/Contact/fields/FinServ__MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>FinServ__MaritalStatus__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>シングル</fullName>
            </value>
            <value>
                <fullName>既婚</fullName>
            </value>
            <value>
                <fullName>別れた</fullName>
            </value>
            <value>
                <fullName>離婚した</fullName>
            </value>
            <value>
                <fullName>未亡人</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>