force-app/main/default/objects/Contact/fields/FinServ__MostUsedChannel__c.field-meta.xml
<CustomField>
    <fullName>FinServ__MostUsedChannel__c</fullName>
    <label>Most Used Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>携帯</fullName>
            </value>
            <value>
                <fullName>ウェブ</fullName>
            </value>
            <value>
                <fullName>支店</fullName>
            </value>
            <value>
                <fullName>コールセンター</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>