force-app/main/default/objects/Contact/fields/FinServ__NextLifeEvent__c.field-meta.xml
<CustomField>
    <fullName>FinServ__NextLifeEvent__c</fullName>
    <label>Next Life Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>学生</fullName>
            </value>
            <value>
                <fullName>労働者</fullName>
            </value>
            <value>
                <fullName>職場復帰</fullName>
            </value>
            <value>
                <fullName>住宅購入</fullName>
            </value>
            <value>
                <fullName>出産</fullName>
            </value>
            <value>
                <fullName>改修工事</fullName>
            </value>
            <value>
                <fullName>転勤・移住</fullName>
            </value>
            <value>
                <fullName>家族の重要な出来事</fullName>
            </value>
            <value>
                <fullName>プロモーション</fullName>
            </value>
            <value>
                <fullName>退職</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>