force-app/main/default/objects/Contact/fields/FinServ__Occupation__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Occupation__c</fullName>
    <label>Occupation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>