force-app/main/default/objects/Contact/fields/FinServ__PrimaryAddressIsShipping__c.field-meta.xml
<CustomField>
    <fullName>FinServ__PrimaryAddressIsShipping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates Shipping Address as the primary address.</description>
    <label>Primary Address (Shipping)</label>
    <type>Checkbox</type>
</CustomField>