force-app/main/default/objects/Contact/fields/FukokuBranchCode__c.field-meta.xml
<CustomField>
    <fullName>FukokuBranchCode__c</fullName>
    <label>富国支社コード</label>
    <length>15</length>
    <type>Text</type>
</CustomField>