force-app/main/default/objects/Contact/fields/GroupList__c.field-meta.xml
<CustomField>
    <fullName>GroupList__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>集団コード</label>
    <referenceTo>GroupCode__c</referenceTo>
    <relationshipLabel>取引先責任者</relationshipLabel>
    <relationshipName>GroupList_relation</relationshipName>
    <type>Lookup</type>
</CustomField>