force-app/main/default/objects/Contact/fields/InternalCode__c.field-meta.xml
<CustomField>
    <fullName>InternalCode__c</fullName>
    <label>インターナルコード</label>
    <length>20</length>
    <type>Text</type>
</CustomField>