force-app/main/default/objects/Contact/fields/JurisdictionalStoreCode__c.field-meta.xml
<CustomField>
    <fullName>JurisdictionalStoreCode__c</fullName>
    <label>営業店コード</label>
    <length>5</length>
    <type>Text</type>
</CustomField>