force-app/main/default/objects/Contact/fields/JurisdictionalStoreCodeFormula__c.field-meta.xml
<CustomField>
    <fullName>JurisdictionalStoreCodeFormula__c</fullName>
    <description>画面営業店コード数式項目</description>
    <formula>SalesBranchName__r.JurisdictionalStoreCode__c</formula>
    <label>営業店コード</label>
    <type>Text</type>
</CustomField>