force-app/main/default/objects/Contact/fields/LastCall__c.field-meta.xml
<CustomField>
    <fullName>LastCall__c</fullName>
    <label>最終コール日</label>
    <type>Date</type>
</CustomField>