force-app/main/default/objects/Contact/fields/LineInsurance__c.field-meta.xml
<CustomField>
    <fullName>LineInsurance__c</fullName>
    <label>保険種目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>