force-app/main/default/objects/Contact/fields/Mail_Cc__c.field-meta.xml
<CustomField>
    <fullName>Mail_Cc__c</fullName>
    <label>メールアドレス（CC）</label>
    <length>100</length>
    <type>Text</type>
</CustomField>