force-app/main/default/objects/Contact/fields/MailOrderSpecialSales__c.field-meta.xml
<CustomField>
    <fullName>MailOrderSpecialSales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>通販特約有無</label>
    <type>Checkbox</type>
</CustomField>