force-app/main/default/objects/Contact/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>社内メモ欄</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>