force-app/main/default/objects/Contact/fields/OfficeCode__c.field-meta.xml
<CustomField>
    <fullName>OfficeCode__c</fullName>
    <label>相対支社コード</label>
    <length>15</length>
    <type>Text</type>
</CustomField>