force-app/main/default/objects/Contact/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>運営元</label>
    <length>255</length>
    <type>Text</type>
</CustomField>