force-app/main/default/objects/Contact/fields/PartnerCode__c.field-meta.xml
<CustomField>
    <fullName>PartnerCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理店コード</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>取引先責任者 (代理店コード)</relationshipLabel>
    <relationshipName>PartnerCode</relationshipName>
    <type>Lookup</type>
</CustomField>